# hestia

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app_settings.rs  companies.rs  database.rs  expenses.rs  lease.rs  leaseholders.rs  main.rs  pdf_formatting.rs  properties.rs  slint_conversion.rs  statements.rs  tenant.rs  testing.rs
ui/: custom_widgets.slint  expenses.slint  globals.slint  leaseholders.slint  main.slint  properties.slint  statements.slint  validation.slint
