[package]
name = "hestia"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "sqlite"]}
async-std = { version = "1.6", features = [ "attributes"]}
futures = "0.3.18"
chrono = "0.4.35"
printpdf = "0.7.0"
