[package]
name = "hestia"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "sqlite"]}
async-std = { version = "1.6", features = [ "attributes"]}
futures = "0.3.18"
chrono = { version = "0.4.35", features = ["serde"] }
printpdf = "0.7.0"
serde = "1.0.202"
serde_json = { version = "1.0", features = ["raw_value"] }
slint = "1.5.1"
slint-build = "1.5.1"
tokio = {version = "1.37.0", features = ["full"]}

[build-dependencies]
slint-build = { version = "1.5.1" }
